[tool.poetry]
name = "dora-project"
version = "0.1.0"
authors = ["Wasif Islam <islamwasif3@gmail.com>"]
description = ""
readme = "README.md"
packages = [
    {include = "dora/survey",from = "components"},
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
fastapi = "^0.104.0"
pylint = "^3.0.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.2"
mypy = "^1.6.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = ['components', 'bases']
namespace_packages = true
explicit_package_bases = true
