[tool.poetry]
name = "dora-project"
version = "0.1.0"
authors = ["Wasif Islam <islamwasif3@gmail.com>"]
description = ""
readme = "README.md"
packages = [
    {include = "dora/survey",from = "components"},
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
fastapi = "^0.104.0"
pylint = "^3.0.2"
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.2"
mypy = "^1.6.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
mypy_path = ['components', 'bases']
namespace_packages = true
explicit_package_bases = true

[tool.ruff]
select = ["ALL"]
ignore = ["D203", "D212", "COM812", "ISC001", "D100", "D103", "D104"]
target-version = "py311"

[tool.ruff.per-file-ignores]
"test/**/*.py" = ["S101"]