[project]
name = "dora"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["fastapi", "uvicorn[standard]"]

[project.optional-dependencies]
dev = ["mypy", "ruff", "pytest", "httpx", "Jinja2", "python-multipart"]

[tool.mypy]
strict = true

[tool.ruff]
select = ["ALL"]
ignore = ["D203", "D212", "COM812", "ISC001", "D100", "D103", "D104", "D101"]
target-version = "py311"

[tool.ruff.per-file-ignores]
"tests/*.py" = ["S101"]